# qtworker

./: .gitignore  LICENSE  Readme.md  pyproject.toml  setup.cfg
docs/: requirements.txt
docs/source/: change.rst  conf.py  index.rst  package.rst  setup.rst
src/qtworker/: __init__.py  worker.py
tests/: test_import.py
