[metadata]
name = qtworker
version = 0.1
description = pyqt worker for threadpool
#long_description = file: src/README_package.md
#long_description_content_type = text/markdown
author = Kolja Wagner
author_email = k.wagner@meteo.uni-hannover.de
classifiers=
    Programming Language :: Python :: 3
    
[options]
packages = 
    qtworker
python_requires= >=3.10
package_dir = 
    =src
zip_save= no